myapp/templates/psvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-preview
spec:
  selector:
    app: myapp
  ports:
  - port: 5000
    targetPort: 5000
